objects/Programming_Language__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language_Name__c</fullName>
        <label>Language Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Programming Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROGLANG-{0000}</displayFormat>
        <label>Programming Language Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programming Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>